# lz4inv

./: Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
python/lz4inv/: __init__.py  lz4inv.pyi
python/tests/: test_all.py
src/: lib.rs
