[project]
name = "lz4inv"
version = "0.2.0"
description = "A Rust-backed Python module for decompressing data compressed with the modified LZ4 algorithm for an anime game."
authors = [{ name = "daflyinbed", email = "1677759063@qq.com" }]
maintainers = [{ name = "StarHeartHunt", email = "starheart233@gmail.com" }]
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = [
    "lz4",
    "lz4inv",
    "compression",
    "decompression",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/MooncellWiki/lz4inv"
Repository = "https://github.com/MooncellWiki/lz4inv"

[dependency-groups]
dev = [
    "ruff>=0.15.0,<0.16",
    "maturin>=1.8.3,<2",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"
